opam-version: "1.2"
available: [ ocaml-version >= "4.04.2" ]
version: "1.0"
maintainer: "Steffen Smolka <smolka@cs.cornell.edu>"
authors: "Steffen Smolka <smolka@cs.cornell.edu>"
bug-reports: "https://github.com/smolkaj/ocaml-parsing/issues"
dev-repo: "https://github.com/smolkaj/ocaml-parsing.git"
homepage: "https://github.com/smolkaj/ocaml-parsing"
license: "MIT"

build: ["dune" "build" "-p" name "-j" jobs]
build-doc: ["dune" "build" "@doc" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
install: ["dune" "install" "-p" name "-j" jobs]

depends: [
  "dune"
  "odoc"
  "menhir"
  #########################
  "base"
  "stdio"
  "sedlex" {>= "2.0"}
  "ppx_deriving"
  "ppx_enumerate"
  "ppx_import" {>= "1.6"}
  "compiler-libs.common"
]
